tests/baselines/reference/collisionThisExpressionAndAmbientClassInGlobal.errors.txt
==== tests/cases/compiler/collisionThisExpressionAndAmbientClassInGlobal.ts (1 errors) ====
    declare class _this { // no error - as no code generation
    }
    var f = () => this;
    var a = new _this(); // Error
                ~~~~~
!!! collisionThisExpressionAndAmbientClassInGlobal.ts(4,13): error TS2206: Expression resolves to variable declaration '_this' that compiler uses to capture 'this' reference.